<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/bosluk_16"
    tools:context=".ekranlar.anaEkranlar.frg_harcamaEkle">

    <TextView
        android:id="@+id/heBaslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/bosluk_16"
        android:text="@string/he_baslik"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/he_cizgi"
        android:layout_marginTop="@dimen/bosluk_16"
        android:background="@color/gri"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/heBaslik"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/he_aciklama"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bosluk_64"
            android:layout_marginLeft="@dimen/bosluk_32"
            android:layout_marginRight="@dimen/bosluk_32"
            android:hint="@string/he_aciklama"
            app:boxCornerRadiusTopStart="@dimen/bosluk_32"
            app:boxCornerRadiusTopEnd="@dimen/bosluk_32"
            app:boxCornerRadiusBottomStart="@dimen/bosluk_32"
            app:boxCornerRadiusBottomEnd="@dimen/bosluk_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/he_cizgi"
            app:boxStrokeColor="@color/ana_renk_1"
            app:boxStrokeWidth="@dimen/bosluk_2"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tI_he_aciklama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/he_tutar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bosluk_16"
            android:layout_marginLeft="@dimen/bosluk_32"
            android:layout_marginRight="@dimen/bosluk_32"
            android:hint="@string/he_tutar"
            app:boxCornerRadiusTopStart="@dimen/bosluk_32"
            app:boxCornerRadiusTopEnd="@dimen/bosluk_32"
            app:boxCornerRadiusBottomStart="@dimen/bosluk_32"
            app:boxCornerRadiusBottomEnd="@dimen/bosluk_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/he_aciklama"
            app:boxStrokeColor="@color/ana_renk_1"
            app:boxStrokeWidth="@dimen/bosluk_2"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tI_he_tutar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/harcamaTuru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bosluk_16"
            android:layout_marginLeft="@dimen/bosluk_32"
            android:layout_marginRight="@dimen/bosluk_32"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/he_tutar"
            android:checkedButton="@id/ht_Diger">

            <RadioButton
                android:id="@+id/ht_Fatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/he_tip1"/>

            <RadioButton
                android:id="@+id/ht_Kira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/he_tip2"/>

            <RadioButton
                android:id="@+id/ht_Egitim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/he_tip3"/>

            <RadioButton
                android:id="@+id/ht_KulturSanat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/he_tip4"/>

            <RadioButton
                android:id="@+id/ht_Diger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/he_tip5"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/paraBirimi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bosluk_16"
            android:layout_marginLeft="@dimen/bosluk_32"
            android:layout_marginRight="@dimen/bosluk_32"
            android:checkedButton="@id/pb_TRY"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/harcamaTuru">

            <RadioButton
                android:id="@+id/pb_TRY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ae_try"/>

            <RadioButton
                android:id="@+id/pb_USD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ae_usd"/>

            <RadioButton
                android:id="@+id/pb_EUR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ae_eur"/>

            <RadioButton
                android:id="@+id/pb_GBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ae_gbp"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ekle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bosluk_16"
            android:layout_marginRight="@dimen/bosluk_32"
            android:text="@string/ae_ekle"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paraBirimi"/>

</androidx.constraintlayout.widget.ConstraintLayout>