<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingVertical="16dp"
tools:context=".ekranlar.anaEkranlar.frg_profil">

<TextView
    android:id="@+id/textViewTitle"
    android:text="@string/pd_baslik"
    android:textSize="20sp"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:layout_marginHorizontal="@dimen/bosluk_16"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

<View
    android:id="@+id/profilBaslik"
    android:layout_marginTop="@dimen/bosluk_16"
    android:background="@color/gri"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    app:layout_constraintTop_toBottomOf="@id/textViewTitle"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/yeniKullaniciAdi"
    android:hint="@string/pd_hint"
    app:boxCornerRadiusTopStart="@dimen/bosluk_32"
    app:boxCornerRadiusTopEnd="@dimen/bosluk_32"
    app:boxCornerRadiusBottomStart="@dimen/bosluk_32"
    app:boxCornerRadiusBottomEnd="@dimen/bosluk_32"

    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    android:layout_marginHorizontal="@dimen/bosluk_32"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:layout_constraintTop_toBottomOf="@id/profilBaslik"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:boxStrokeColor="@color/ana_renk_1"
    app:boxStrokeWidth="@dimen/bosluk_2"
    >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tI_yeniKullaniciAdi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</com.google.android.material.textfield.TextInputLayout>

<RadioGroup
    android:id="@+id/rb_cinsiyetSecici"
    android:checkedButton="@id/rb_diger"
    android:paddingHorizontal="@dimen/bosluk_32"
    android:layout_marginTop="@dimen/bosluk_32"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/yeniKullaniciAdi"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <RadioButton
        android:id="@+id/rb_erkek"
        android:text="@string/pd_erkek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:id="@+id/rb_kadin"
        android:text="@string/pd_kadin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:id="@+id/rb_diger"
        android:text="@string/pd_diger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_kaydet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bosluk_32"
        android:layout_marginEnd="@dimen/bosluk_32"
        android:text="@string/pd_kaydet"
        app:cornerRadius="@dimen/bosluk_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rb_cinsiyetSecici" />

</androidx.constraintlayout.widget.ConstraintLayout>