<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ekranlar.geciciEkranlar.frg_onBoarding1">

    <ImageView
        android:id="@+id/obResim"
        app:srcCompat="@drawable/onboarding1"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/obKarsilama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/resim"/>

    <TextView
        android:id="@+id/obKarsilama"
        android:text="@string/ob_karsilama_1"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/bosluk_32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/obResim"
        app:layout_constraintBottom_toTopOf="@id/obAciklama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/obAciklama"
        android:text="@string/ob_aciklama_1"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/bosluk_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/obKarsilama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/obGec"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/bosluk_16"
        android:layout_marginBottom="@dimen/bosluk_32"
        android:text="@string/ob_gec"
        app:cornerRadius="@dimen/bosluk_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/ana_renk_1"
        app:strokeWidth="20dp"
        android:textColor="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>